--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -7,6 +7,7 @@ frr_exporter_enabled_collectors:
   - bgp
   - bgp.peer-types
   - bgp.peer-descriptions
+  - bgp.peer-descriptions.plain-text
   - ospf
 
 frr_exporter_disabled_collectors: []
